--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <h1>Contact Me</h1>
-<p>5 Ogbojo Koo Street</p>
+<p>56 Accra Street</p>
 <p>Accra Ghana</p>
-<p>0503110047</p>
+<p>0503118847</p>
 <br>
 <form class="" method="post" action="mailto:ike@talentriver.io" enctype="text/plain">
   <label for="">Name</label>
